# cyberpunk-dots-hyprland

./: README.md
audacity/: audacity.cfg  pluginregistry.cfg  pluginsettings.cfg
btop/: btop.conf
eww/: eww.scss  eww.yuck
fastfetch/: config.jsonc  temp.txt
filezilla/: filezilla.xml  layout.xml  sitemanager.xml
go/telemetry/local/: asm@devel-devel-linux-amd64-2025-12-22.v1.count  cgo@devel-devel-linux-amd64-2025-12-22.v1.count  compile@devel-devel-linux-amd64-2025-12-22.v1.count  go@devel-devel-linux-amd64-2025-12-19.v1.count  go@devel-devel-linux-amd64-2025-12-22.v1.count  gofmt@devel-devel-linux-amd64-2025-12-22.v1.count  link@devel-devel-linux-amd64-2025-12-22.v1.count  local.2025-09-05.json  local.2025-09-12.json  local.2025-10-03.json  local.2025-11-21.json  local.2025-11-28.json  local.2025-12-12.json  local.2025-12-19.json
gtk-3.0/: bookmarks
hypr/: hyprland.conf  hyprpaper.conf  kittysound.zsh
hypr/plugins/: CMakeLists.txt  hyprpm.toml  plugin.cpp
hypr/scripts/: kitty-sounds.sh
ibus/bus/: c79b5797f45c4319b723c57528bc6f27-unix-wayland-0
kitty/: kitty.conf
quickshell/appMenu/: shell.qml
quickshell/mybar/: shell.qml
rofi/: config.rasi  launch-rofi.sh
rofi/assets/DuckDuckGo Settings_files/: b.25a30ef752a3ef6dbf21.js  d.dd42bc843b4c7da51230.js  en_US.835f9587ca64c888a5a9ae0892d6c760.js  g.ceab665b1871a270e84d.js  s.b46a66f2b32d560474e0.js  s.df8e488ddbf6e1f7b193.css  u.fd7b225c90247775480f.js
spicetify/: config-xpui.ini
